# grpc-features

./: Cargo.toml  README.md  docker-compose.yaml
feature_server/: Cargo.toml
feature_server/src/: app.rs  data.rs  lib.rs
feature_server/src/amqp/: message.rs  mod.rs
feature_server/src/grpc/: mod.rs
grpc_api/: Cargo.toml  build.rs
grpc_api/proto/features/v1/: feature.proto  service.proto
grpc_api/src/: lib.rs
rabbitmq/: definitions.json  rabbitmq.conf
